fixed container overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     min-width: 100vw;
     max-width: 100vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     /* overflow: hidden; */
 }
 
